# hermes-operator

./: .gitignore  .golangci.yml  .goreleaser.yaml  .yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  PROJECT  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  bundle.Dockerfile  go.mod  go.sum  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature.yaml
.github/workflows/: agent-image-smoke.yaml  agent-image.yaml  build.yaml  ci.yaml  codeql.yaml  conformance.yaml  e2e.yaml  helm-rbac.yaml  operatorhub-submit.yaml  reconcile-guard.yaml  release-please.yaml  release.yaml  scorecard.yaml  verify-signing.yaml
api/v1/: groupversion_info.go  hermesclusterdefaults_types.go  hermesclusterdefaults_types_test.go  hermesinstance_listtypes_test.go  hermesinstance_types.go  hermesinstance_types_test.go  hermesselfconfig_types.go  hermesselfconfig_types_test.go  webhook_hermesclusterdefaults.go  webhook_hermesinstance.go  webhook_hermesselfconfig.go  zz_generated.deepcopy.go
bundle/manifests/: hermes-operator.clusterserviceversion.yaml  hermes.agent_hermesinstances.yaml
charts/hermes-operator/: .helmignore  Chart.yaml  values.yaml
cmd/: main.go
config/manager/: manager.yaml
docs/: api-reference.md  api-versioning.md  autoupdate.md  backup-format.md  backup-restore.md  conditions.md  conformance.md  conventions.md  deprecations.md  migration.md  release-process.md  runbook-platform-gateways.md  selfconfig.md  supported-versions.md
examples/: README.md
hack/: boilerplate.go.txt  check-helm-rbac.sh  reconcile-guard.sh  sync-bundle-rbac.sh
images/hermes-agent/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
(+177 files in other folders)
